# bevy_glicol

./: Cargo.toml  bacon.toml
bevy_glicol/: Cargo.toml
bevy_glicol/examples/: basic_egui.rs
bevy_glicol/src/: prelude.rs
examples/: basic.rs
glicol_tui/: Cargo.toml
main/: Cargo.toml
main/src/: lib.rs  util.rs
parser/tests/: all_nodes.rs
synth/: Cargo.toml
tui_glicol/: .envrc  Cargo.toml  README.md
tui_glicol/.config/: config.json5  sample-list.json
tui_glicol/.github/workflows/: cd.yml
tui_glicol/assets/glicols/: synth.glicol
tui_glicol/src/: action.rs  app.rs  cli.rs  config.rs  main.rs  tui.rs
tui_glicol/src/components/: graph.rs  log_display.rs  mod.rs
