[package]
name = "bevy_glicol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bevy = "0.15.2"
cpal = "0.15.3"
glicol = { git="https://github.com/lavaeater/glicol", branch = "main" }
glicol_synth = { git = "https://github.com/lavaeater/glicol", branch = "main" }
parking_lot = "0.12.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.92"
web-sys = "0.3.69"

[dev-dependencies]
bevy_egui = "0.33.0"
